--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -6,6 +6,10 @@ bind "MWHEELDOWN" "+jump"
 bind "t" "+lookatweapon"
 bind "MOUSE5" "+voicerecord"
 
+//general
+cl_autowepswitch "0" // do not auotswitch weapons
+cl_clanid "5167149" // clantag with groupid
+
 //bind nades
 bind "alt" "slot6"     //he
 bind "f" "slot7"     //flash
@@ -20,4 +24,33 @@ net_graphheight "9999"
 bind "TAB" "+scorenet"
 alias "+scorenet" "+showscores; net_graphheight 0"
 alias "-scorenet" "-showscores; net_graphheight 9999"
+
+//Crosshair
+cl_crosshair_drawoutline "0"
+cl_crosshair_dynamic_maxdist_splitratio "1"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.5"
+cl_crosshair_dynamic_splitdist "4"
+cl_crosshair_outlinethickness "1"
+cl_crosshairalpha "255"
+cl_crosshaircolor "1"
+cl_crosshaircolor_b "0"
+cl_crosshaircolor_g "255"
+cl_crosshaircolor_r "0"
+cl_crosshairdot "1"
+cl_crosshairgap "-1"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairscale "0"
+cl_crosshairsize "4"
+cl_crosshairstyle "6"
+cl_crosshairthickness "0.5"
+cl_crosshairusealpha "1"
+cl_crosshair_sniper_width "1"
+
+// Radar
+cl_radar_always_centered "1"
+cl_radar_icon_scale_min "0.6"
+cl_radar_rotate "1"
+cl_radar_scale "0.7"
+cl_radar_square_with_scoreboard "1"
 
