--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -9,6 +9,12 @@ bind "MOUSE5" "+voicerecord"
 //general
 cl_autowepswitch "0" // do not auotswitch weapons
 cl_clanid "5167149" // clantag with groupid
+cl_showloadout 0 // hides the inventory on the right hand side
+cl_forcepreload 1 // force load everything on the map before the game starts (better fps)
+closeonbuy "1"
+sensitivity "0.9"
+spec_replay_autostart "0"
+ui_steam_overlay_notification_position "topright"
 
 //bind nades
 bind "alt" "slot6"     //he
