--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -16,6 +16,14 @@ sensitivity "0.9"
 spec_replay_autostart "0"
 ui_steam_overlay_notification_position "topright"
 
+//network
+fps_max 128
+rate 128000
+cl_updaterate 128
+cl_cmdrate 128
+cl_interp_ratio 1
+cl_interp 0
+
 //bind nades
 bind "alt" "slot6"     //he
 bind "f" "slot7"     //flash
