--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -6,6 +6,14 @@ bind "MWHEELDOWN" "+jump"
 bind "t" "+lookatweapon"
 bind "MOUSE5" "+voicerecord"
 
+//bind nades
+bind "alt" "slot6"     //he
+bind "f" "slot7"     //flash
+bind "SPACE" "slot8" //smoke
+
+//bind swith between molotov/decoy
+bind "6" "slot9;slot10"
+
 //general
 cl_autowepswitch "0" // do not auotswitch weapons
 cl_clanid "5167149" // clantag with groupid
@@ -15,6 +23,7 @@ closeonbuy "1"
 sensitivity "0.9"
 spec_replay_autostart "0"
 ui_steam_overlay_notification_position "topright"
+cl_disablefreezecam "0"
 
 //network
 fps_max 128
@@ -23,14 +32,6 @@ cl_updaterate 128
 cl_cmdrate 128
 cl_interp_ratio 1
 cl_interp 0
-
-//bind nades
-bind "alt" "slot6"     //he
-bind "f" "slot7"     //flash
-bind "SPACE" "slot8" //smoke
-
-//bind swith between molotov/decoy
-bind "6" "slot9;slot10"
 
 //show netgraph on TAB
 net_graph "1"
