--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -46,7 +46,7 @@ cl_crosshair_dynamic_maxdist_splitratio "1"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "4"
-cl_crosshair_outlinethickness "1"
+cl_crosshair_outlinethickness "0"
 cl_crosshairalpha "255"
 cl_crosshaircolor "1"
 cl_crosshaircolor_b "0"
@@ -54,10 +54,11 @@ cl_crosshaircolor_g "255"
 cl_crosshaircolor_r "0"
 cl_crosshairdot "1"
 cl_crosshairgap "-1"
+cl_fixedcrosshairgap "-1"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairscale "0"
-cl_crosshairsize "4"
-cl_crosshairstyle "6"
+cl_crosshairsize "5"
+cl_crosshairstyle "6"      // try to use 4, since 6 is invalid value
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
 cl_crosshair_sniper_width "1"
