--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -37,8 +37,8 @@ cl_interp 0
 net_graph "1"
 net_graphheight "9999"
 bind "TAB" "+scorenet"
-alias "+scorenet" "+showscores; net_graphheight 0"
-alias "-scorenet" "-showscores; net_graphheight 9999"
+alias "+scorenet" "+showscores; net_graphheight 0; cl_showpos 1"
+alias "-scorenet" "-showscores; net_graphheight 9999; cl_showpos 0"
 
 //Crosshair
 cl_crosshair_drawoutline "0"
@@ -69,4 +69,8 @@ cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "1"
+
+bind "CapsLock" "+zoom_radar"
+alias +zoom_radar "cl_radar_scale 0.8"
+alias -zoom_radar "cl_radar_scale 0.3"
 
