--- a/csgo/myconfig.cfg
+++ b/csgo/myconfig.cfg
@@ -70,7 +70,7 @@ cl_radar_rotate "1"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "1"
 
-bind "CapsLock" "+zoom_radar"
+bind "MOUSE4" "+zoom_radar"
 alias +zoom_radar "cl_radar_scale 0.8"
 alias -zoom_radar "cl_radar_scale 0.3"
 
