--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -12,9 +12,9 @@ bind "f" "slot7"     //flash
 bind "SPACE" "slot8" //smoke
 
 //bind swith between molotov/decoy
-alias decoy "slot9;bind 4 molotov"
-alias molotov "slot10;bind 4 decoy"
-bind 4 decoy
+alias decoy "bind 6 molotov;slot9"
+alias molotov "bind 6 decoy;slot10"
+bind 6 decoy
 
 //general
 cl_autowepswitch "0" // do not auotswitch weapons
