--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -16,6 +16,19 @@ alias decoy "bind 6 molotov;slot9"
 alias molotov "bind 6 decoy;slot10"
 bind 6 decoy
 
+// _______________
+// | Tickrate For 128 Tickrate Server (will auto scale down for 64 tick)
+// ??
+
+rate "128000"
+cl_cmdrate "128"
+cl_updaterate "128"
+cl_interp "0.0"
+cl_interp_ratio "1"
+cl_timeout "300"
+cl_lagcompensation "1"
+ds_get_newest_subscribed_files
+
 //general
 cl_autowepswitch "0" // do not auotswitch weapons
 cl_clanid "5167149" // clantag with groupid
