--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -29,6 +29,37 @@ cl_timeout "300"
 cl_lagcompensation "1"
 ds_get_newest_subscribed_files
 
+// _______________
+// | Server Settings |
+// ??
+
+cl_showpluginmessages     0
+cl_disablehtmlmotd        1
+cl_forcepreload           1
+cl_downloadfilter "nosounds"
+mm_dedicated_search_maxping 60
+player_nevershow_communityservermessage 1
+cl_draw_only_deathnotices "0"
+cl_clearhinthistory "1"
+cl_debugrumble "0"
+adsp_debug "0"
+clientport 27006  //chang or remove in case of troubles
+cl_resend "1.5"
+cl_resend_timeout "6"
+cl_teammate_colors_show "0"
+lobby_voice_chat_enabled "0"
+cl_show_clan_in_death_notice "0"
+con_enable "1"
+mp_autoteambalance 0
+mp_limitteams 0
+
+
+// *******************************************************************************
+// **** Force Multi Core Rendering (disable if not using multicore processor) ****
+// *******************************************************************************
+
+mat_queue_mode 2
+
 //general
 cl_autowepswitch "0" // do not auotswitch weapons
 cl_clanid "5167149" // clantag with groupid
@@ -88,4 +119,5 @@ cl_radar_square_with_scoreboard "1"
 bind "MOUSE4" "+zoom_radar"
 alias +zoom_radar "cl_radar_scale 0.8"
 alias -zoom_radar "cl_radar_scale 0.3"
+
 
