--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -120,4 +120,27 @@ bind "MOUSE4" "+zoom_radar"
 alias +zoom_radar "cl_radar_scale 0.8"
 alias -zoom_radar "cl_radar_scale 0.3"
 
+// _______________
+// | Graphic Optimization
+// ??
 
+r_dynamic "0"
+r_eyegloss "0"
+sys_antialiasing "0"
+sys_refldetail "0"
+fps_max "999"
+fps_max_menu "145"
+mat_monitorgamma "1.6"
+mat_monitorgamma_tv_enabled "1"
+func_break_max_pieces "0"
+cl_predict "1"
+cl_predictweapons "1"
+muzzleflash_light "0"
+cl_detail_avoid_force "0"
+cl_detail_avoid_radius "0"
+cl_detail_avoid_recover_speed "0"
+cl_detail_max_sway "0"
+cl_loadout_colorweaponnames "0"
+bind "shift" "+speed;r_cleardecals"
+bind "CTRL" "+duck;r_cleardecals"
+joystick 0
