cleardecals on TAB

--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -82,7 +82,7 @@ cl_interp 0
 //show netgraph on TAB
 net_graph "1"
 net_graphheight "9999"
-bind "TAB" "+scorenet"
+bind "TAB" "+scorenet;r_cleardecals"
 alias "+scorenet" "+showscores; net_graphheight 0; cl_showpos 1"
 alias "-scorenet" "-showscores; net_graphheight 9999; cl_showpos 0"
 
@@ -141,6 +141,4 @@ cl_detail_avoid_radius "0"
 cl_detail_avoid_recover_speed "0"
 cl_detail_max_sway "0"
 cl_loadout_colorweaponnames "0"
-bind "shift" "+speed;r_cleardecals"
-bind "CTRL" "+duck;r_cleardecals"
 joystick 0
