switch radar and he

--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -7,7 +7,7 @@ bind "t" "+lookatweapon"
 bind "MOUSE5" "+voicerecord"
 
 //bind nades
-bind "alt" "slot6"     //he
+bind "mouse4" "slot6"     //he
 bind "f" "slot7"     //flash
 bind "SPACE" "slot8" //smoke
 
@@ -15,6 +15,8 @@ bind "SPACE" "slot8" //smoke
 alias decoy "bind 6 molotov;slot9"
 alias molotov "bind 6 decoy;slot10"
 bind 6 decoy
+
+bind "alt" "+zoom_radar"
 
 // _______________
 // | Tickrate For 128 Tickrate Server (will auto scale down for 64 tick)
@@ -116,7 +118,6 @@ cl_radar_rotate "1"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "1"
 
-bind "MOUSE4" "+zoom_radar"
 alias +zoom_radar "cl_radar_scale 0.8"
 alias -zoom_radar "cl_radar_scale 0.3"
 
