--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -48,7 +48,7 @@ adsp_debug "0"
 clientport 27006  //chang or remove in case of troubles
 cl_resend "1.5"
 cl_resend_timeout "6"
-cl_teammate_colors_show "0"
+cl_teammate_colors_show "1"    //show teammates colors
 lobby_voice_chat_enabled "0"
 cl_show_clan_in_death_notice "0"
 con_enable "1"
