--- a/csgo/csds/cfg/1x1.cfg
+++ b/csgo/csds/cfg/1x1.cfg
@@ -10,6 +10,7 @@ sv_full_alltalk 						"1"
 sv_infinite_ammo						"2" 
 sv_pausable								"1"
 sv_regeneration_force_on 			"0" //Headshot only = "1"
+sm_onlyhs_enable                    "0" //Headshot only = "1"
 ammo_grenade_limit_flashbang 		"0"
 ammo_grenade_limit_total 			"0"
 mp_autoteambalance 					"0"
