--- a/csgo/demo.cfg
+++ b/csgo/demo.cfg
@@ -1,4 +1,8 @@
 // Overwatch config
 bind "F7" "demo_timescale 0.3"
 bind "F8" "demo_timescale 10"
-bind "F9" "demo_timescale 1"
+
+// bind pause/resume
+alias resume "bind F9 pause;demo_timescale 1; demo_resume"
+alias pause "bind F9 resume;demo_pause"
+bind F9 resume
