--- a/csgo/demo.cfg
+++ b/csgo/demo.cfg
@@ -3,6 +3,6 @@ bind "F7" "demo_timescale 0.3"
 bind "F8" "demo_timescale 10"
 
 // bind pause/resume
-alias resume "bind F9 pause;demo_timescale 1; demo_resume"
-alias pause "bind F9 resume;demo_pause"
-bind F9 resume
+alias dem_resume "bind F9 dem_pause;demo_timescale 1; demo_resume"
+alias dem_pause "bind F9 dem_resume;demo_pause"
+bind F9 dem_resume
