fast grenade throw

--- a/csgo/zeckson.cfg
+++ b/csgo/zeckson.cfg
@@ -8,8 +8,8 @@ bind "MOUSE5" "+voicerecord"
 
 //bind nades
 bind "mouse4" "slot6"     //he
-bind "f" "slot7"     //flash
-bind "SPACE" "slot8" //smoke
+bind "f" "use weapon_knife; use weapon_flashbang; r_cleardecals"   //flash
+bind "SPACE" "use weapon_knife; use weapon_smokegrenade; r_cleardecals" //smoke
 
 //bind swith between molotov/decoy
 alias decoy "bind 6 molotov;slot9"
